# cookiecutter-aprsd-plugin

{{cookiecutter.plugin_name}}/: noxfile.py  pyproject.toml
